TAG:  qcreports_db-3-1-0-5
TAG:  qcreports_db-3-1-0-4
TAG:  qcreports_db-3-1-0-3
DATE: 12/22/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1
b) TR 6436; conversion to EntrezGene
c) move "output" directory to /data/reports

TAG:  qcreports_db-tr3007-BP
DATE: 12/22/2004
STAFF: dbm
RELEASE: A
CHANGES:
a) branch point tag for TR 3007 (MGC Load)

TAG:  qcreports_db-3-1-0-2
DATE: 12/21/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1
b) HMD_RIKEN.sql; performance improvements

TAG:  qcreports_db-maint6300-BP
DATE: 12/21/2004
STAFF: lec
RELEASE: A
CHANGES:
a) branch point tag for TR 6300 (MGI 3.11)

TAG:  qcreports_db-3-1-0-1
DATE: 12/17/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1
b) TR 6424/GXD_Images.py

TAG:  qcreports_db-24-0-6
DATE: 11/30/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1
b) TR 6382/GXD_SpecNoAge.sql

TAG:  qcreports_db-24-0-5
DATE: 11/19/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1

TAG:  qcreports_db-24-0-4
DATE: 11/10/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1

TAG:  qcreports_db-24-0-3
DATE: 10/27/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1
b) strainAllele.sh

TAG:  qcreports_db-24-0-2
DATE: 10/12/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1
b) TR 6270/MRK_NomenNotInformative.sql

TAG:  qcreports_db-24-0-1
TAG:  qcreports_db-24-0-0
DATE: 10/11/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1

TAG:  qcreports_db-23-0-14
DATE: 09/16/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.01
b) TR 6205; GXD_DevImages.py replaced with GXD_Images.py

TAG:  qcreports_db-23-0-13
DATE: 09/09/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.01
b) TR 6146/goStats.sh
c) TR 6098/changes to MRK_GOUnknown.sql
d) MRK_NomenTransgene.py; fix error
e) SEQ_Marker.py; performance improvements
f) TR 6158; split HMD_SymbolDiffs

TAG:  qcreports_db-23-0-12
DATE: 08/25/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.01
b) TR 6133/ALL_Progress.sql

TAG:  qcreports_db-23-0-10
DATE: 08/23/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.01
b) ALL_NomenText.py

TAG:  qcreports_db-23-0-9