@@ -8,12 +8,18 @@ where r.year >= 1975
 and datalength(r.abstract) = 0
 go
 
+create index idx1 on #refs1(_Refs_key)
+go
+
 select r._Refs_key, a.accID
 into #refs2
 from #refs1 r, ACC_Accession a
 where r._Refs_key = a._Object_key
 and a._MGIType_key = 1
-and a._LogicalDB_key = 7
+and a._LogicalDB_key in (7,29)
+go
+
+create index idx1 on #refs2(_Refs_key)
 go
 
 select r.*
@@ -24,11 +30,14 @@ where not exists
 where r._Refs_key = n._Refs_key and n.note like '%No Abstract Available%')
 go
 
+create index idx1 on #refs3(_Refs_key)
+go
+
 set nocount off
 go
 
 print ""
-print "References w/ Medline UI and No Abstract"
+print "References w/ Medline or PubMed ID and No Abstract"
 print ""
 
 select distinct r.accID, c.jnum, substring(c.short_citation, 1, 50)
